inventory-service-refactored-to-get-skucode-and-stockvalue